<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bckk">

    <Button
        android:id="@+id/button_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="320dp"
        android:backgroundTint="@color/green"
        android:text="@string/HOME"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_exercises"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="320dp"
        android:backgroundTint="@color/green"
        android:text="@string/EXERCISES"
        app:layout_constraintStart_toEndOf="@+id/button_home"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_nutrition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="320dp"
        android:backgroundTint="@color/green"
        android:text="@string/NUTRITION"
        app:layout_constraintStart_toEndOf="@+id/button_exercises"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="320dp"
        android:backgroundTint="@color/green"
        android:text="@string/logout"
        app:layout_constraintStart_toEndOf="@+id/button_nutrition"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nutritions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/nutritions"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/button_exercises"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="411dp"
        android:layout_height="301dp"
        android:layout_marginTop="4dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/nutritions"
        tools:ignore="MissingConstraints"
        android:textColor="@android:color/white"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>