<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <Button
        android:id="@+id/button_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="320dp"
        android:backgroundTint="@color/green"
        android:text="@string/HOME"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_exercises"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="320dp"
        android:backgroundTint="@color/green"
        android:text="@string/EXERCISES"
        app:layout_constraintStart_toEndOf="@+id/button_home"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_nutrition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="320dp"
        android:backgroundTint="@color/green"
        android:text="@string/NUTRITION"
        app:layout_constraintStart_toEndOf="@+id/button_exercises"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="320dp"
        android:backgroundTint="@color/green"
        android:text="@string/logout"
        app:layout_constraintStart_toEndOf="@+id/button_nutrition"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/meal_text"
        android:layout_width="277dp"
        android:layout_height="49dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="56dp"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_exercises"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="259dp"
        android:layout_height="46dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="4dp"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meal_text"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/nutrition_img"
        android:layout_width="224dp"
        android:layout_height="145dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/cal_text"
        android:layout_width="191dp"
        android:layout_height="42dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="12dp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nutrition_img"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/prep_text"
        android:layout_width="276dp"
        android:layout_height="69dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="4dp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cal_text"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>